//
// Created by dominik on 03.06.19.
//

#ifndef KONEKO_DUEL_CARPA_H
#define KONEKO_DUEL_CARPA_H


#include "Enemy.h"

class Carpa : Enemy {
public:
    Carpa();
};


#endif //KONEKO_DUEL_CARPA_H
