//
// Created by dominik on 02.06.19.
//

#ifndef KONEKO_DUEL_COMPONENT_H
#define KONEKO_DUEL_COMPONENT_H


class Component {
public:
    virtual void start() = 0;
    virtual void printMenu() = 0;
};


#endif //KONEKO_DUEL_COMPONENT_H
