//
// Created by dominik on 02.06.19.
//

#ifndef KONEKO_DUEL_MAINMENUCOMPONENT_H
#define KONEKO_DUEL_MAINMENUCOMPONENT_H


class MainMenuComponent {

};


#endif //KONEKO_DUEL_MAINMENUCOMPONENT_H
