//
// Created by dominik on 03.06.19.
//

#ifndef KONEKO_DUEL_WORLDMAPCOMPONENT_H
#define KONEKO_DUEL_WORLDMAPCOMPONENT_H


#include "Component.h"

class WorldMapComponent : Component {

};


#endif //KONEKO_DUEL_WORLDMAPCOMPONENT_H
