@startuml Class-Diagram-Koneko-Duel

left to right direction

abstract class Component {
    + start(): void
    + printMenu(): void
}
note left
    Inside every Component class is a start() method, 
    which contains a loop.
end note

class MainMenuComponent {

}

class DuelComponent {
    - enemies: vector
    + generateEnemy(int number = 1): Enemy
    + startNewDuel(Player player, Enemy enemy): void
}

note right
    DuelComponent starts duel between player and generated enemies.
    update() will be called after every attack,
    it will refresh the health stats of the enemy and player object.
    When a duel is finished, it will return to GameController.
end note

class PlayerCreationComponent {
    + createNewPlayer(): Player
}

class WorldMapComponent {
    - mapLevel: int
    + initMap(Player p): void
    + setMapLevel(int mapLevel): void
    + getMapLevel(): int
}

class RewardComponent {

}

note right
This component will be shown after a duel.
Player wil be informed about gained experience points or level-ups.
end note

abstract class LifeForm {
    - healthPoints: int
    - attackPoints: int
    - level: int
    + takeDamage(int damage)
    + getHealthPoints(): int
    + setHealthPoints(int healthPoints): void
    + getAttackPoints(): int
    + setAttackPoints(int attackPoints): void
    + setLevel(int level): void
    + getLevel(): int
}

class Player {
    - name: string
    - experiencePoints: int
    - levelUp()
    + getName(): string
    + setName(string name): void
    + resetPlayer(): void
    + consumeExperiencePoints(int experiencePoints)
    + getExperiencePoints(): int
}

note left 
    consumeExperiencePoints() will 
    call levelUp()
end note

abstract class Enemy {
    - bawl: string
    - droppableExperiencePoints: int
    + dropExperiencePoints();
    + setBawl(string bawl): void
    + getBawl(): string
    + getASCIIImage(): string
}

class EnemyFactory <<factory>> {
    + getNewEnemy(): Enemy
}

class Carpa {
}

note right
    very simple life form
end note

class AngryKoneko {
}

note right
    AngryKoneko can drop 
    reward (items, attack / health bonus)
end note

class GameController {
    - score: int
    - state: int
    + start(): void
    + setState(int state): void
    + getScore(): int
    + run(): void
}

note left
    GameController sets the appropriate component.
    State will be filled with constants (e.g. duel-state,
    world-map-state, reward-state)
    From main.cpp the GameController's start() method will 
    be called.
    run: Game loop
end note

' Relations
Component <|-- MainMenuComponent
Component <|-- DuelComponent
Component <|-- WorldMapComponent
Component <|-- RewardComponent
Component <|-- PlayerCreationComponent

LifeForm <|-- Player
LifeForm <|-- Enemy

EnemyFactory - Enemy
Enemy <|-- Carpa
Enemy <|-- AngryKoneko

GameController - Player
GameController - Component

DuelComponent -- EnemyFactory

@enduml
